--- a/index.html
+++ b/index.html
@@ -88,7 +88,6 @@
   <nav class="navi1">
     <h2>CX-3</h2>
     <ul class="navi-menu">
-      <li><a href="https://www.mazda.co.jp/cars/cx-3/#react_cQtW9dwVUyPq11dmeLCVw" target="_blank">360°vew</a></li>
       <li>
       <div class="cataloguemenu1">カタログ</div>
       </li>
@@ -103,14 +102,24 @@
       </dl>
       </div>
       <li><a href="https://www.mazda.co.jp/globalassets/assets/carlife/accessories/support/info_lib/now/common/pdf/ac-catalog/cx-3.pdf">アクセサリー</a></li>
-      <li><a href="https://www.mazda.co.jp/globalassets/assets/cars/cx-3/common/pdf/cx-3_specification_202204.pdf">主要緒元・装備</a></li>
+      <li>
+      <div class="cataloguemenu1-2">主要緒元・装備</div>
+      </li>
+      <div class="detail1-2">
+        <dl>
+          <dt><a href="PDF/CX-3/cx-3_specification_syuyousyogen.pdf" target="_blank">主要諸元</a></dt>
+          <dt><a href="PDF/CX-3/cx-3_specification_color.pdf" target="_blank">カラーコンビネーション</a></dt>
+          <dt><a href="PDF/CX-3/cx-3_specification_puraice&op.pdf" target="_blank">価格＆セットオプション</a></dt>
+          <dt><a href="PDF/CX-3/cx-3_specification_safety.pdf" target="_blank">安全装備</a></dt>
+          <dt><a href="PDF/CX-3/cx-3_specification_es.pdf" target="_blank">環境仕様</a></dt>
+        </dl>
+      </div>
     </ul>
   </nav>
 
   <nav class="navi2">
     <h2>CX-30</h2>
     <ul class="navi-menu">
-      <li><a href="https://www.mazda.co.jp/cars/cx-30/#react_0qkuoVadEanXYUW426vQ">360°vew</a></li>
       <li>
       <div class="cataloguemenu2">カタログ</div>
       </li>
@@ -125,14 +134,26 @@
       </dl>
       </div>
       <li><a href="#">アクセサリー</a></li>
-      <li><a href="#">主要緒元・装備</a></li>
+      <li>
+        <div class="cataloguemenu2-2">主要緒元・装備</div>
+        </li>
+        <div class="detail2-2">
+          <dl>
+            <dt><a href="PDF/CX-30/cx-30_specification_syuyousyogen.pdf" target="_blank">主要緒元</a></dt>
+            <dt><a href="PDF/CX-30/cx-30_specification_syuyousoubi.pdf" target="_blank">主要装備</a></dt>
+            <dt><a href="PDF/CX-30/cx-30_specification_praice&op.pdf" target="_blank">価格＆セットオプション</a></dt>
+            <dt><a href="PDF/CX-30/cx-30_specification_connected.pdf" target="_blank">コネクテッドサービス</a></dt>
+            <dt><a href="PDF/CX-30/cx-30_specification_safety.pdf" target="_blank">安全装備</a></dt>
+            <dt><a href="PDF/CX-30/cx-30_specification_color.pdf" target="_blank">カラーコンビネーション</a></dt>
+            <dt class="dt-bottom"><a href="PDF/CX-30/cx-30_specification_es.pdf" target="_blank">環境仕様</a></dt>
+          </dl>
+        </div>
     </ul>
   </nav>
 
   <nav class="navi3">
     <h2>MX-30</h2>
     <ul class="navi-menu">
-      <li><a href="https://www.mazda.co.jp/cars/mx-30/#react_wcxM3957EkKbo8tG979TCg">360°vew</a></li>
       <li>
       <div class="cataloguemenu3">カタログ</div>
       </li>
@@ -144,21 +165,32 @@
         <dt><a href="PDF/MX-30/MX-30_color.pdf" target="_blank">ボディ・シート色</a></dt>
         <dt><a href="PDF/MX-30/MX-30_equipment.pdf" target="_blank">主要装備</a></dt>
         <dt><a href="PDF/MX-30/MX-30_connect.pdf" target="_blank">マツダコネクト</a></dt>
-        <dt><a href="PDF/MX-30/MX-30evmodel_start.pdf" target="_blank">始めから<br>(EV)</br></a></dt>
+        <dt class="ev-dt-top"><a href="PDF/MX-30/MX-30evmodel_start.pdf" target="_blank">始めから<br>(EV)</br></a></dt>
         <dt><a href="PDF/MX-30/MX-30evmodel_grade_praice.pdf" target="_blank">グレード<br>(EV)</br></a></dt>
         <dt><a href="PDF/MX-30/MX-30evmodel_grade_chart.pdf" target="_blank">グレード別装備<br>(EV)</br></a></dt>
         <dt><a href="PDF/MX-30/MX-30evmodel_color.pdf" target="_blank">ボディ・シート色<br>(EV)</br></a></dt>
       </dl>
       </div>
       <li><a href="#">アクセサリー</a></li>
-      <li><a href="#">主要緒元・装備</a></li>
+      <li>
+        <div class="cataloguemenu3-2">主要緒元・装備</div>
+        </li>
+        <div class="detail3-2">
+          <dl>
+            <dt><a href="PDF/CX-3/CX-3_start.pdf" target="_blank">始めから</a></dt>
+            <dt><a href="PDF/CX-3/CX-3_grade_price.pdf" target="_blank">グレード</a></dt>
+            <dt><a href="PDF/CX-3/CX-3_grade_chart.pdf" target="_blank">グレード別装備</a></dt>
+            <dt><a href="PDF/CX-3/CX-3_color.pdf" target="_blank">ボディ・シート色</a></dt>
+            <dt><a href="PDF/CX-3/CX-3_equipment.pdf" target="_blank">主要装備</a></dt>
+            <dt class="dt-bottom"><a href="PDF/CX-3/CX-3_mazda_connect.pdf" target="_blank">マツダコネクト</a></dt>
+          </dl>
+        </div>
     </ul>
   </nav>
 
   <nav class="navi4">
     <h2>CX-5</h2>
     <ul class="navi-menu">
-      <li><a href="https://www.mazda.co.jp/cars/cx-5/#react_o6XunB1OWUimK95sJdvnGw">360°vew</a></li>
       <li>
       <div class="cataloguemenu4">カタログ</div>
       </li>
@@ -173,14 +205,25 @@
       </dl>
       </div>
       <li><a href="#">アクセサリー</a></li>
-      <li><a href="#">主要緒元・装備</a></li>
+      <li>
+        <div class="cataloguemenu4-2">主要緒元・装備</div>
+        </li>
+        <div class="detail4-2">
+          <dl>
+            <dt><a href="PDF/CX-3/CX-3_start.pdf" target="_blank">始めから</a></dt>
+            <dt><a href="PDF/CX-3/CX-3_grade_price.pdf" target="_blank">グレード</a></dt>
+            <dt><a href="PDF/CX-3/CX-3_grade_chart.pdf" target="_blank">グレード別装備</a></dt>
+            <dt><a href="PDF/CX-3/CX-3_color.pdf" target="_blank">ボディ・シート色</a></dt>
+            <dt><a href="PDF/CX-3/CX-3_equipment.pdf" target="_blank">主要装備</a></dt>
+            <dt class="dt-bottom"><a href="PDF/CX-3/CX-3_mazda_connect.pdf" target="_blank">マツダコネクト</a></dt>
+          </dl>
+        </div>
     </ul>
   </nav>
 
   <nav class="navi5">
     <h2>CX-60</h2>
     <ul class="navi-menu">
-      <li><a href="https://www.mazda.co.jp/cars/cx-60/#react_eu3QxOdWNEKTJAzvbh6Nw">360°vew</a></li>
       <li>
       <div class="cataloguemenu5">カタログ</div>
       </li>
@@ -195,14 +238,25 @@
       </dl>
       </div>
       <li><a href="#">アクセサリー</a></li>
-      <li><a href="#">主要緒元・装備</a></li>
+      <li>
+        <div class="cataloguemenu5-2">主要緒元・装備</div>
+        </li>
+        <div class="detail5-2">
+          <dl>
+            <dt><a href="PDF/CX-3/CX-3_start.pdf" target="_blank">始めから</a></dt>
+            <dt><a href="PDF/CX-3/CX-3_grade_price.pdf" target="_blank">グレード</a></dt>
+            <dt><a href="PDF/CX-3/CX-3_grade_chart.pdf" target="_blank">グレード別装備</a></dt>
+            <dt><a href="PDF/CX-3/CX-3_color.pdf" target="_blank">ボディ・シート色</a></dt>
+            <dt><a href="PDF/CX-3/CX-3_equipment.pdf" target="_blank">主要装備</a></dt>
+            <dt class="dt-bottom"><a href="PDF/CX-3/CX-3_mazda_connect.pdf" target="_blank">マツダコネクト</a></dt>
+          </dl>
+        </div>
     </ul>
   </nav>
 
   <nav class="navi6">
     <h2>CX-8</h2>
     <ul class="navi-menu">
-      <li><a href="https://www.mazda.co.jp/cars/cx-8/#react_nf7fjDQ10WkFAWeecdjJg">360°vew</a></li>
       <li>
       <div class="cataloguemenu6">カタログ</div>
       </li>
@@ -217,14 +271,25 @@
       </dl>
       </div>
       <li><a href="#">アクセサリー</a></li>
-      <li><a href="#">主要緒元・装備</a></li>
+      <li>
+        <div class="cataloguemenu6-2">主要緒元・装備</div>
+        </li>
+        <div class="detail6-2">
+          <dl>
+            <dt><a href="PDF/CX-3/CX-3_start.pdf" target="_blank">始めから</a></dt>
+            <dt><a href="PDF/CX-3/CX-3_grade_price.pdf" target="_blank">グレード</a></dt>
+            <dt><a href="PDF/CX-3/CX-3_grade_chart.pdf" target="_blank">グレード別装備</a></dt>
+            <dt><a href="PDF/CX-3/CX-3_color.pdf" target="_blank">ボディ・シート色</a></dt>
+            <dt><a href="PDF/CX-3/CX-3_equipment.pdf" target="_blank">主要装備</a></dt>
+            <dt class="dt-bottom"><a href="PDF/CX-3/CX-3_mazda_connect.pdf" target="_blank">マツダコネクト</a></dt>
+          </dl>
+        </div>
     </ul>
   </nav>
 
   <nav class="navi7">
     <h2>MAZDA6</h2>
     <ul class="navi-menu">
-      <li><a href="https://www.mazda.co.jp/cars/mazda6/#react_P7KCvXIPSU2JlXA97nILw">360°vew</a></li>
       <li>
       <div class="cataloguemenu7">カタログ</div>
       </li>
@@ -239,14 +304,25 @@
       </dl>
       </div>
       <li><a href="#">アクセサリー</a></li>
-      <li><a href="#">主要緒元・装備</a></li>
+      <li>
+        <div class="cataloguemenu7-2">主要緒元・装備</div>
+        </li>
+        <div class="detail7-2">
+          <dl>
+            <dt><a href="PDF/CX-3/CX-3_start.pdf" target="_blank">始めから</a></dt>
+            <dt><a href="PDF/CX-3/CX-3_grade_price.pdf" target="_blank">グレード</a></dt>
+            <dt><a href="PDF/CX-3/CX-3_grade_chart.pdf" target="_blank">グレード別装備</a></dt>
+            <dt><a href="PDF/CX-3/CX-3_color.pdf" target="_blank">ボディ・シート色</a></dt>
+            <dt><a href="PDF/CX-3/CX-3_equipment.pdf" target="_blank">主要装備</a></dt>
+            <dt class="dt-bottom"><a href="PDF/CX-3/CX-3_mazda_connect.pdf" target="_blank">マツダコネクト</a></dt>
+          </dl>
+        </div>
     </ul>
   </nav>
 
   <nav class="navi8">
     <h2>MAZDA3</h2>
     <ul class="navi-menu">
-      <li><a href="https://www.mazda.co.jp/cars/mazda3/#react_5fFmXqDUkulr7SvOyDbmg">360°vew</a></li>
       <li>
       <div class="cataloguemenu8">カタログ</div>
       </li>
@@ -261,7 +337,19 @@
       </dl>
       </div>
       <li><a href="#">アクセサリー</a></li>
-      <li><a href="#">主要緒元・装備</a></li>
+      <li>
+        <div class="cataloguemenu8-2">主要緒元・装備</div>
+        </li>
+        <div class="detail8-2">
+          <dl>
+            <dt><a href="PDF/CX-3/CX-3_start.pdf" target="_blank">始めから</a></dt>
+            <dt><a href="PDF/CX-3/CX-3_grade_price.pdf" target="_blank">グレード</a></dt>
+            <dt><a href="PDF/CX-3/CX-3_grade_chart.pdf" target="_blank">グレード別装備</a></dt>
+            <dt><a href="PDF/CX-3/CX-3_color.pdf" target="_blank">ボディ・シート色</a></dt>
+            <dt><a href="PDF/CX-3/CX-3_equipment.pdf" target="_blank">主要装備</a></dt>
+            <dt class="dt-bottom"><a href="PDF/CX-3/CX-3_mazda_connect.pdf" target="_blank">マツダコネクト</a></dt>
+          </dl>
+        </div>
     </ul>
   </nav>
 
@@ -283,14 +371,26 @@
       </dl>
       </div>
       <li><a href="#">アクセサリー</a></li>
-      <li><a href="#">主要緒元・装備</a></li>
+      <li>
+        <div class="cataloguemenu9-2">主要緒元・装備</div>
+        </li>
+        <div class="detail9-2">
+          <dl>
+            <dt><a href="PDF/CX-3/CX-3_start.pdf" target="_blank">始めから</a></dt>
+            <dt><a href="PDF/CX-3/CX-3_grade_price.pdf" target="_blank">グレード</a></dt>
+            <dt><a href="PDF/CX-3/CX-3_grade_chart.pdf" target="_blank">グレード別装備</a></dt>
+            <dt><a href="PDF/CX-3/CX-3_color.pdf" target="_blank">ボディ・シート色</a></dt>
+            <dt><a href="PDF/CX-3/CX-3_equipment.pdf" target="_blank">主要装備</a></dt>
+            <dt class="dt-bottom"><a href="PDF/CX-3/CX-3_mazda_connect.pdf" target="_blank">マツダコネクト</a></dt>
+          </dl>
+        </div>
     </ul>
   </nav>
 
   <nav class="navi10">
     <h2>ROADSTER</h2>
     <ul class="navi-menu">
-      <li><a href="https://www.mazda.co.jp/cars/roadster/#react_l6l5BKp0OJuyMZ4s6JYA">360°vew</a></li>
+      
       <li>
       <div class="cataloguemenu10">カタログ</div>
       </li>
@@ -300,14 +400,26 @@
         <dt><a href="PDF/ROADSTER/roadster_gurade_praice.pdf" target="_blank">グレード</a></dt>
         <dt><a href="PDF/ROADSTER/roadster_color.pdf" target="_blank">ボディ・シート色</a></dt>
         <dt><a href="PDF/ROADSTER/roadster_equipment.pdf" target="_blank">主要装備</a></dt>
-        <dt><a href="PDF/ROADSTER/roadster-rf_start.pdf" target="_blank">始まり<br>(RF)</br></a></dt>
+        <dt class="RF-dt-top"><a href="PDF/ROADSTER/roadster-rf_start.pdf" target="_blank">始めから<br>(RF)</br></a></dt>
         <dt><a href="PDF/ROADSTER/roadster-rf_gurade_praice.pdf" target="_blank">グレード<br>(RF)</br></a></dt>
         <dt><a href="PDF/ROADSTER/roadster-rf_color.pdf" target="_blank">ボディ・シート色<br>(RF)</br></a></dt>
         <dt><a href="PDF/ROADSTER/roadster-rf_equipment.pdf" target="_blank">主要装備<br>(RF)</br></a></dt>
       </dl>
       </div>
       <li><a href="#">アクセサリー</a></li>
-      <li><a href="#">主要緒元・装備</a></li>
+      <li>
+        <div class="cataloguemenu10-2">主要緒元・装備</div>
+        </li>
+        <div class="detail10-2">
+          <dl>
+            <dt><a href="PDF/CX-3/CX-3_start.pdf" target="_blank">始めから</a></dt>
+            <dt><a href="PDF/CX-3/CX-3_grade_price.pdf" target="_blank">グレード</a></dt>
+            <dt><a href="PDF/CX-3/CX-3_grade_chart.pdf" target="_blank">グレード別装備</a></dt>
+            <dt><a href="PDF/CX-3/CX-3_color.pdf" target="_blank">ボディ・シート色</a></dt>
+            <dt><a href="PDF/CX-3/CX-3_equipment.pdf" target="_blank">主要装備</a></dt>
+            <dt class="dt-bottom"><a href="PDF/CX-3/CX-3_mazda_connect.pdf" target="_blank">マツダコネクト</a></dt>
+          </dl>
+        </div>
     </ul>
   </nav>
 
