--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
           <dt><a href="PDF/CX-3/cx-3_specification_color.pdf" target="_blank">カラーコンビネーション</a></dt>
           <dt><a href="PDF/CX-3/cx-3_specification_puraice&op.pdf" target="_blank">価格＆セットオプション</a></dt>
           <dt><a href="PDF/CX-3/cx-3_specification_safety.pdf" target="_blank">安全装備</a></dt>
-          <dt><a href="PDF/CX-3/cx-3_specification_es.pdf" target="_blank">環境仕様</a></dt>
+          <dt class="dt-bottom"><a href="PDF/CX-3/cx-3_specification_es.pdf" target="_blank">環境仕様</a></dt>
         </dl>
       </div>
     </ul>
