--- a/index.html
+++ b/index.html
@@ -177,12 +177,13 @@
         </li>
         <div class="detail3-2">
           <dl>
-            <dt><a href="PDF/CX-3/CX-3_start.pdf" target="_blank">始めから</a></dt>
-            <dt><a href="PDF/CX-3/CX-3_grade_price.pdf" target="_blank">グレード</a></dt>
-            <dt><a href="PDF/CX-3/CX-3_grade_chart.pdf" target="_blank">グレード別装備</a></dt>
-            <dt><a href="PDF/CX-3/CX-3_color.pdf" target="_blank">ボディ・シート色</a></dt>
-            <dt><a href="PDF/CX-3/CX-3_equipment.pdf" target="_blank">主要装備</a></dt>
-            <dt class="dt-bottom"><a href="PDF/CX-3/CX-3_mazda_connect.pdf" target="_blank">マツダコネクト</a></dt>
+            <dt><a href="PDF/MX-30/mx-30_specification_syuyousyogen.pdf" target="_blank">主要緒元</a></dt>
+            <dt><a href="PDF/MX-30/mx-30_specification_syuyousoubi.pdf" target="_blank">主要装備</a></dt>
+            <dt><a href="PDF/MX-30/mx-30_specification_puraice&op.pdf" target="_blank">価格＆セットオプション</a></dt>
+            <dt><a href="PDF/MX-30/mx-30_specification_color.pdf" target="_blank">カラーコンビネーション</a></dt>
+            <dt><a href="PDF/MX-30/mx-30_specification_safety.pdf" target="_blank">安全装備</a></dt>
+            <dt><a href="PDF/MX-30/mx-30_specification_connected.pdf" target="_blank">コネクテッドサービス</a></dt>
+            <dt class="dt-bottom"><a href="PDF/MX-30/mx-30_specification_es.pdf" target="_blank">環境仕様</a></dt>
           </dl>
         </div>
     </ul>
