--- a/index.html
+++ b/index.html
@@ -184,6 +184,13 @@
             <dt><a href="PDF/MX-30/mx-30_specification_safety.pdf" target="_blank">安全装備</a></dt>
             <dt><a href="PDF/MX-30/mx-30_specification_connected.pdf" target="_blank">コネクテッドサービス</a></dt>
             <dt class="dt-bottom"><a href="PDF/MX-30/mx-30_specification_es.pdf" target="_blank">環境仕様</a></dt>
+            <dt><a href="PDF/MX-30/mx-30evmodel_specification_zyuuden.pdf" target="_blank">給電・充電(EV)</a></dt>
+            <dt><a href="PDF/MX-30/mx-30evmodel_specification_connected.pdf" target="_blank">コネクテッドサービス(EV)</a></dt>
+            <dt><a href="PDF/MX-30/mx-30evmodel_specification_safety.pdf" target="_blank">安全装備(EV)</a></dt>
+            <dt><a href="PDF/MX-30/mx-30evmodel_specification_syuyousoubi.pdf" target="_blank">主要装備(EV)</a></dt>
+            <dt><a href="PDF/MX-30/mx-30evmodel_specification_color.pdf" target="_blank">カラーコンビネーション(EV)</a></dt>
+            <dt><a href="PDF/MX-30/mx-30evmodel_specification_es.pdf" target="_blank">環境仕様(EV)</a></dt>
+            <dt class="dt-bottom"><a href="PDF/MX-30/mx-30evmodel_specification_syuyousyogen.pdf" target="_blank">主要緒元(EV)</a></dt>
           </dl>
         </div>
     </ul>
@@ -211,12 +218,13 @@
         </li>
         <div class="detail4-2">
           <dl>
-            <dt><a href="PDF/CX-3/CX-3_start.pdf" target="_blank">始めから</a></dt>
-            <dt><a href="PDF/CX-3/CX-3_grade_price.pdf" target="_blank">グレード</a></dt>
-            <dt><a href="PDF/CX-3/CX-3_grade_chart.pdf" target="_blank">グレード別装備</a></dt>
-            <dt><a href="PDF/CX-3/CX-3_color.pdf" target="_blank">ボディ・シート色</a></dt>
-            <dt><a href="PDF/CX-3/CX-3_equipment.pdf" target="_blank">主要装備</a></dt>
-            <dt class="dt-bottom"><a href="PDF/CX-3/CX-3_mazda_connect.pdf" target="_blank">マツダコネクト</a></dt>
+            <dt><a href="PDF/CX-5/cx-5_specification_syuyousyogen.pdf" target="_blank">主要緒元</a></dt>
+            <dt><a href="PDF/CX-5/cx-5_specification_syuyousoubi.pdf" target="_blank">主要装備</a></dt>
+            <dt><a href="PDF/CX-5/cx-5_specification_puraice_op.pdf" target="_blank">価格＆セットオプション</a></dt>
+            <dt><a href="PDF/CX-5/cx-5_specification_connected.pdf" target="_blank">コネクテッドサービス</a></dt>
+            <dt><a href="PDF/CX-5/cx-5_specification_safety.pdf" target="_blank">安全装備</a></dt>
+            <dt><a href="PDF/CX-5/cx-5_specification_color.pdf" target="_blank">カラーコンビネーション</a></dt>
+            <dt class="dt-bottom"><a href="PDF/CX-5/cx-5_specification_es.pdf" target="_blank">環境仕様</a></dt>
           </dl>
         </div>
     </ul>
@@ -244,12 +252,13 @@
         </li>
         <div class="detail5-2">
           <dl>
-            <dt><a href="PDF/CX-3/CX-3_start.pdf" target="_blank">始めから</a></dt>
-            <dt><a href="PDF/CX-3/CX-3_grade_price.pdf" target="_blank">グレード</a></dt>
-            <dt><a href="PDF/CX-3/CX-3_grade_chart.pdf" target="_blank">グレード別装備</a></dt>
-            <dt><a href="PDF/CX-3/CX-3_color.pdf" target="_blank">ボディ・シート色</a></dt>
-            <dt><a href="PDF/CX-3/CX-3_equipment.pdf" target="_blank">主要装備</a></dt>
-            <dt class="dt-bottom"><a href="PDF/CX-3/CX-3_mazda_connect.pdf" target="_blank">マツダコネクト</a></dt>
+            <dt><a href="PDF/CX-60/cx-60_specification_syuyousyogen.pdf" target="_blank">主要諸元</a></dt>
+            <dt><a href="PDF/CX-60/cx-60_specification_syuyousoubi.pdf" target="_blank">主要装備</a></dt>
+            <dt><a href="PDF/CX-60/cx-60_specification_color.pdf" target="_blank">カラーコンビネーション</a></dt>
+            <dt><a href="PDF/CX-60/cx-60_specification_puraice_op.pdf" target="_blank">価格＆セットオプション</a></dt>
+            <dt><a href="PDF/CX-60/cx-60_specification_connected.pdf" target="_blank">コネクテッドサービス</a></dt>
+            <dt><a href="PDF/CX-60/cx-60_specification_safety.pdf" target="_blank">安全装備</a></dt>
+            <dt class="dt-bottom"><a href="PDF/CX-60/cx-60_specification_es.pdf" target="_blank">環境仕様</a></dt>
           </dl>
         </div>
     </ul>
@@ -277,12 +286,13 @@
         </li>
         <div class="detail6-2">
           <dl>
-            <dt><a href="PDF/CX-3/CX-3_start.pdf" target="_blank">始めから</a></dt>
-            <dt><a href="PDF/CX-3/CX-3_grade_price.pdf" target="_blank">グレード</a></dt>
-            <dt><a href="PDF/CX-3/CX-3_grade_chart.pdf" target="_blank">グレード別装備</a></dt>
-            <dt><a href="PDF/CX-3/CX-3_color.pdf" target="_blank">ボディ・シート色</a></dt>
-            <dt><a href="PDF/CX-3/CX-3_equipment.pdf" target="_blank">主要装備</a></dt>
-            <dt class="dt-bottom"><a href="PDF/CX-3/CX-3_mazda_connect.pdf" target="_blank">マツダコネクト</a></dt>
+            <dt><a href="PDF/CX-8/cx-8_specification_syuyousyogen.pdf" target="_blank">主要緒元</a></dt>
+            <dt><a href="PDF/CX-8/cx-8_specification_syuyousoubi.pdf" target="_blank">主要装備</a></dt>
+            <dt><a href="PDF/CX-8/cx-8_specification_color.pdf" target="_blank">カラーコンビネーション</a></dt>
+            <dt><a href="PDF/CX-8/cx-8_specification_puraice_op.pdf" target="_blank">価格＆セットオプション</a></dt>
+            <dt><a href="PDF/CX-8/cx-8_specification_connected.pdf" target="_blank">コネクテッドサービス</a></dt>
+            <dt><a href="PDF/CX-8/cx-8_specification_safety.pdf" target="_blank">安全装備</a></dt>
+            <dt class="dt-bottom"><a href="PDF/CX-8/cx-8_specification_es.pdf" target="_blank">環境仕様</a></dt>
           </dl>
         </div>
     </ul>
@@ -310,12 +320,16 @@
         </li>
         <div class="detail7-2">
           <dl>
-            <dt><a href="PDF/CX-3/CX-3_start.pdf" target="_blank">始めから</a></dt>
-            <dt><a href="PDF/CX-3/CX-3_grade_price.pdf" target="_blank">グレード</a></dt>
-            <dt><a href="PDF/CX-3/CX-3_grade_chart.pdf" target="_blank">グレード別装備</a></dt>
-            <dt><a href="PDF/CX-3/CX-3_color.pdf" target="_blank">ボディ・シート色</a></dt>
-            <dt><a href="PDF/CX-3/CX-3_equipment.pdf" target="_blank">主要装備</a></dt>
-            <dt class="dt-bottom"><a href="PDF/CX-3/CX-3_mazda_connect.pdf" target="_blank">マツダコネクト</a></dt>
+            <dt><a href="PDF/MAZDA6/mazda6_specification_syuyousyogen_sedan.pdf" target="_blank">主要緒元(SEDAN)</a></dt>
+            <dt><a href="PDF/MAZDA6/mazda6_specification_syuyousoubi_sedan.pdf" target="_blank">主要装備(SEDAN)</a></dt>
+            <dt><a href="PDF/MAZDA6/mazda6_specification_color_sedan.pdf" target="_blank">カラーコンビネーション（SEDAN)</a></dt>
+            <dt><a href="PDF/MAZDA6/mazda6_specification_es_sedan.pdf" target="_blank">環境仕様(SEDAN)</a></dt>
+            <dt><a href="PDF/MAZDA6/mazda6_specification_syuyousyogen_wagon.pdf" target="_blank">主要緒元(WAGON)</a></dt>
+            <dt><a href="PDF/MAZDA6/mazda6_specification_syuyousoubi_wagon.pdf" target="_blank">主要装備(WAGON)</a></dt>
+            <dt><a href="PDF/MAZDA6/mazda6_specification_color_wagon.pdf" target="_blank">カラーコンビネーション(WAGON)</a></dt>
+            <dt><a href="PDF/MAZDA6/mazda6_specification_es_wagon.pdf" target="_blank">環境仕様(WAGON)</a></dt>
+            <dt><a href="PDF/MAZDA6/mazda6_specification_puraice_op.pdf" target="_blank">価格＆セットオプション</a></dt>
+            <dt class="dt-bottom"><a href="PDF/MAZDA6/mazda6_specification_safety.pdf" target="_blank">安全装備</a></dt>
           </dl>
         </div>
     </ul>
