--- a/index.html
+++ b/index.html
@@ -432,17 +432,17 @@
         </li>
         <div class="detail10-2">
           <dl>
-            <dt><a href="PDF/CX-3/CX-3_start.pdf" target="_blank">主要緒元</a></dt>
-            <dt><a href="PDF/CX-3/CX-3_grade_price.pdf" target="_blank">主要装備</a></dt>
-            <dt><a href="PDF/CX-3/CX-3_grade_chart.pdf" target="_blank">価格＆セットオプション</a></dt>
-            <dt><a href="PDF/CX-3/CX-3_color.pdf" target="_blank">環境仕様</a></dt>
-            <dt class="dt-bottom"><a href="PDF/CX-3/CX-3_mazda_connect.pdf" target="_blank">安全装備</a></dt>
-            <dt><a href="PDF/CX-3/CX-3_start.pdf" target="_blank">主要緒元(RF)</a></dt>
-            <dt><a href="PDF/CX-3/CX-3_grade_price.pdf" target="_blank">主要装備(RF)</a></dt>
-            <dt><a href="PDF/CX-3/CX-3_grade_chart.pdf" target="_blank">価格＆セットオプション(RF)</a></dt>
-            <dt><a href="PDF/CX-3/CX-3_color.pdf" target="_blank">カラーコンビネーション(RF)</a></dt>
-            <dt><a href="PDF/CX-3/CX-3_color.pdf" target="_blank">環境仕様(RF)</a></dt>
-            <dt class="dt-bottom"><a href="PDF/CX-3/CX-3_mazda_connect.pdf" target="_blank">安全装備(RF)</a></dt>
+            <dt><a href="PDF/ROADSTER/roadster_specification_syuyousyogen.pdf" target="_blank">主要緒元</a></dt>
+            <dt><a href="PDF/ROADSTER/roadster_specification_syuyousoubi.pdf" target="_blank">主要装備</a></dt>
+            <dt><a href="PDF/ROADSTER/roadster_specification_puraice_op.pdf" target="_blank">価格＆セットオプション</a></dt>
+            <dt><a href="PDF/ROADSTER/roadster_specification_es.pdf" target="_blank">環境仕様</a></dt>
+            <dt class="dt-bottom"><a href="PDF/ROADSTER/roadster_specification_safety.pdf" target="_blank">安全装備</a></dt>
+            <dt><a href="PDF/ROADSTER/roadster-rf_specification_syuyousyogen.pdf" target="_blank">主要緒元(RF)</a></dt>
+            <dt><a href="PDF/ROADSTER/roadster-rf_specification_syuyousoubi.pdf" target="_blank">主要装備(RF)</a></dt>
+            <dt><a href="PDF/ROADSTER/roadster-rf_specification_puraice_op.pdf" target="_blank">価格＆セットオプション(RF)</a></dt>
+            <dt><a href="PDF/ROADSTER/roadster-rf_specification_color.pdf" target="_blank">カラーコンビネーション(RF)</a></dt>
+            <dt><a href="PDF/ROADSTER/roadster-rf_specification_es.pdf" target="_blank">環境仕様(RF)</a></dt>
+            <dt class="dt-bottom"><a href="PDF/ROADSTER/roadster-rf_specification_safety.pdf" target="_blank">安全装備(RF)</a></dt>
           </dl>
         </div>
     </ul>
