--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
         <dt><a href="PDF/CX-3/CX-3_mazda_connect.pdf" target="_blank">マツダコネクト</a></dt>
       </dl>
       </div>
-      <li><a href="PDF/CX-3/cx-3_accessory.pdf">アクセサリー</a></li>
+      <li><a href="PDF/CX-3/cx-3_accessory.pdf" target="_blank">アクセサリー</a></li>
       <li>
       <div class="cataloguemenu1-2">主要緒元・装備</div>
       </li>
@@ -133,7 +133,7 @@
         <dt><a href="PDF/CX-30/CX-30_mazda_connect.pdf" target="_blank">マツダコネクト</a></dt>
       </dl>
       </div>
-      <li><a href="PDF/CX-30/cx-30_accessory.pdf">アクセサリー</a></li>
+      <li><a href="PDF/CX-30/cx-30_accessory.pdf" target="_blank">アクセサリー</a></li>
       <li>
         <div class="cataloguemenu2-2">主要緒元・装備</div>
         </li>
@@ -171,7 +171,7 @@
         <dt><a href="PDF/MX-30/MX-30evmodel_color.pdf" target="_blank">ボディ・シート色<br>(EV)</br></a></dt>
       </dl>
       </div>
-      <li><a href="PDF/MX-30/mx-30_accessory.pdf">アクセサリー</a></li>
+      <li><a href="PDF/MX-30/mx-30_accessory.pdf" target="_blank">アクセサリー</a></li>
       <li>
         <div class="cataloguemenu3-2">主要緒元・装備</div>
         </li>
@@ -212,7 +212,7 @@
         <dt><a href="PDF/CX-5/CX-5_mazda_connect.pdf" target="_blank">マツダコネクト</a></dt>
       </dl>
       </div>
-      <li><a href="PDF/CX-5/cx-5_accessory.pdf">アクセサリー</a></li>
+      <li><a href="PDF/CX-5/cx-5_accessory.pdf" target="_blank">アクセサリー</a></li>
       <li>
         <div class="cataloguemenu4-2">主要緒元・装備</div>
         </li>
@@ -246,7 +246,7 @@
         <dt><a href="PDF/CX-60/CX-60_mazda_connect.pdf" target="_blank">マツダコネクト</a></dt>
       </dl>
       </div>
-      <li><a href="PDF/CX-60/cx-60_accessory.pdf">アクセサリー</a></li>
+      <li><a href="PDF/CX-60/cx-60_accessory.pdf" target="_blank">アクセサリー</a></li>
       <li>
         <div class="cataloguemenu5-2">主要緒元・装備</div>
         </li>
@@ -280,7 +280,7 @@
         <dt><a href="PDF/CX-8/CX-8_mazda_connect.pdf" target="_blank">マツダコネクト</a></dt>
       </dl>
       </div>
-      <li><a href="PDF/CX-8/cx-8_accessory.pdf">アクセサリー</a></li>
+      <li><a href="PDF/CX-8/cx-8_accessory.pdf" target="_blank">アクセサリー</a></li>
       <li>
         <div class="cataloguemenu6-2">主要緒元・装備</div>
         </li>
@@ -314,7 +314,7 @@
         <dt><a href="PDF/MAZDA6/mazda6_mazda_connect.pdf" target="_blank">マツダコネクト</a></dt>
       </dl>
       </div>
-      <li><a href="PDF/MAZDA6/mazda6_accessory.pdf">アクセサリー</a></li>
+      <li><a href="PDF/MAZDA6/mazda6_accessory.pdf" target="_blank">アクセサリー</a></li>
       <li>
         <div class="cataloguemenu7-2">主要緒元・装備</div>
         </li>
@@ -323,11 +323,11 @@
             <dt><a href="PDF/MAZDA6/mazda6_specification_syuyousyogen_sedan.pdf" target="_blank">主要緒元(セダン)</a></dt>
             <dt><a href="PDF/MAZDA6/mazda6_specification_syuyousoubi_sedan.pdf" target="_blank">主要装備(セダン)</a></dt>
             <dt><a href="PDF/MAZDA6/mazda6_specification_color_sedan.pdf" target="_blank">カラーコンビネーション(セダン)</a></dt>
-            <dt><a href="PDF/MAZDA6/mazda6_specification_es_sedan.pdf" target="_blank">環境仕様(セダン)</a></dt>
+            <dt class="dt-bottom"><a href="PDF/MAZDA6/mazda6_specification_es_sedan.pdf" target="_blank">環境仕様(セダン)</a></dt>
             <dt><a href="PDF/MAZDA6/mazda6_specification_syuyousyogen_wagon.pdf" target="_blank">主要緒元(ワゴン)</a></dt>
             <dt><a href="PDF/MAZDA6/mazda6_specification_syuyousoubi_wagon.pdf" target="_blank">主要装備(ワゴン)</a></dt>
             <dt><a href="PDF/MAZDA6/mazda6_specification_color_wagon.pdf" target="_blank">カラーコンビネーション(ワゴン)</a></dt>
-            <dt><a href="PDF/MAZDA6/mazda6_specification_es_wagon.pdf" target="_blank">環境仕様(ワゴン)</a></dt>
+            <dt class="dt-bottom"><a href="PDF/MAZDA6/mazda6_specification_es_wagon.pdf" target="_blank">環境仕様(ワゴン)</a></dt>
             <dt><a href="PDF/MAZDA6/mazda6_specification_puraice_op.pdf" target="_blank">価格＆セットオプション</a></dt>
             <dt class="dt-bottom"><a href="PDF/MAZDA6/mazda6_specification_safety.pdf" target="_blank">安全装備</a></dt>
           </dl>
@@ -351,20 +351,20 @@
         <dt><a href="PDF/MAZDA3/mazda3_connect.pdf" target="_blank">マツダコネクト</a></dt>
       </dl>
       </div>
-      <li><a href="PDF/MAZDA3/mazda3_accessory.pdf">アクセサリー</a></li>
+      <li><a href="PDF/MAZDA3/mazda3_accessory.pdf" target="_blank">アクセサリー</a></li>
       <li>
         <div class="cataloguemenu8-2">主要緒元・装備</div>
         </li>
         <div class="detail8-2">
           <dl>
-            <dt><a href="PDF/MAZDA3/mazda3_specification_syuyousyogen_fastback.pdf" target="_blank">主要緒元(ファストバック)</a></dt>
-            <dt><a href="PDF/MAZDA3/mazda3_specification_syuyousoubi_fastback.pdf" target="_blank">主要装備(ファストバック)</a></dt>
-            <dt><a href="PDF/MAZDA3/mazda3_specification_es_fastback.pdf" target="_blank">環境仕様(ファストバック)</a></dt>
-            <dt><a href="PDF/MAZDA3/mazda3_specification_color_fastback.pdf" target="_blank">カラーコンビネーション(ファストバック)</a></dt>
+            <dt><a href="PDF/MAZDA3/mazda3_specification_syuyousyogen_fastback.pdf" target="_blank">主要緒元<br>(ファストバック)</br></a></dt>
+            <dt><a href="PDF/MAZDA3/mazda3_specification_syuyousoubi_fastback.pdf" target="_blank">主要装備<br>(ファストバック)</br></a></dt>
+            <dt><a href="PDF/MAZDA3/mazda3_specification_es_fastback.pdf" target="_blank">環境仕様<br>(ファストバック)</br></a></dt>
+            <dt class="dt-bottom"><a href="PDF/MAZDA3/mazda3_specification_color_fastback.pdf" target="_blank">カラーコンビネーション(ファストバック)</a></dt>
             <dt><a href="PDF/MAZDA3/mazda3_specification_syuyousyogen_sedan.pdf" target="_blank">主要緒元(セダン)</a></dt>
             <dt><a href="PDF/MAZDA3/mazda3_specification_syuyousoubi_sedan.pdf" target="_blank">主要装備(セダン)</a></dt>
             <dt><a href="PDF/MAZDA3/mazda3_specification_es_sedan.pdf" target="_blank">環境仕様(セダン)</a></dt>
-            <dt><a href="PDF/MAZDA3/mazda3_specification_color_sedan.pdf" target="_blank">カラーコンビネーション(セダン)</a></dt>
+            <dt class="dt-bottom"><a href="PDF/MAZDA3/mazda3_specification_color_sedan.pdf" target="_blank">カラーコンビネーション(セダン)</a></dt>
             <dt><a href="PDF/MAZDA3/mazda3_specification_connected.pdf" target="_blank">コネクテッドサービス</a></dt>
             <dt><a href="PDF/MAZDA3/mazda3_specification_safety.pdf" target="_blank">安全装備</a></dt>
             <dt class="dt-bottom"><a href="PDF/MAZDA3/mazda3_specification_puraice_op.pdf" target="_blank">価格＆セットオプション</a></dt>
@@ -390,7 +390,7 @@
         <dt><a href="PDF/MAZDA2/mazda2_equipment.pdf" target="_blank">主要装備</a></dt>
       </dl>
       </div>
-      <li><a href="PDF/MAZDA2/mazda2_accessory.pdf">アクセサリー</a></li>
+      <li><a href="PDF/MAZDA2/mazda2_accessory.pdf" target="_blank">アクセサリー</a></li>
       <li>
         <div class="cataloguemenu9-2">主要緒元・装備</div>
         </li>
@@ -426,7 +426,7 @@
         <dt><a href="PDF/ROADSTER/roadster-rf_equipment.pdf" target="_blank">主要装備<br>(RF)</br></a></dt>
       </dl>
       </div>
-      <li><a href="PDF/ROADSTER/roadster_accessory.pdf">アクセサリー</a></li>
+      <li><a href="PDF/ROADSTER/roadster_accessory.pdf" target="_blank">アクセサリー</a></li>
       <li>
         <div class="cataloguemenu10-2">主要緒元・装備</div>
         </li>
