--- a/index.html
+++ b/index.html
@@ -184,13 +184,13 @@
             <dt><a href="PDF/MX-30/mx-30_specification_safety.pdf" target="_blank">安全装備</a></dt>
             <dt><a href="PDF/MX-30/mx-30_specification_connected.pdf" target="_blank">コネクテッドサービス</a></dt>
             <dt class="dt-bottom"><a href="PDF/MX-30/mx-30_specification_es.pdf" target="_blank">環境仕様</a></dt>
-            <dt><a href="PDF/MX-30/mx-30evmodel_specification_zyuuden.pdf" target="_blank">給電・充電(EV)</a></dt>
-            <dt><a href="PDF/MX-30/mx-30evmodel_specification_connected.pdf" target="_blank">コネクテッドサービス(EV)</a></dt>
-            <dt><a href="PDF/MX-30/mx-30evmodel_specification_safety.pdf" target="_blank">安全装備(EV)</a></dt>
-            <dt><a href="PDF/MX-30/mx-30evmodel_specification_syuyousoubi.pdf" target="_blank">主要装備(EV)</a></dt>
-            <dt><a href="PDF/MX-30/mx-30evmodel_specification_color.pdf" target="_blank">カラーコンビネーション(EV)</a></dt>
-            <dt><a href="PDF/MX-30/mx-30evmodel_specification_es.pdf" target="_blank">環境仕様(EV)</a></dt>
-            <dt class="dt-bottom"><a href="PDF/MX-30/mx-30evmodel_specification_syuyousyogen.pdf" target="_blank">主要緒元(EV)</a></dt>
+            <dt><a href="PDF/MX-30/mx-30evmodel_specification_zyuuden.pdf" target="_blank">給電・充電<br>(EV)</br></a></dt>
+            <dt><a href="PDF/MX-30/mx-30evmodel_specification_connected.pdf" target="_blank">コネクテッドサービス<br>(EV)</br></a></dt>
+            <dt><a href="PDF/MX-30/mx-30evmodel_specification_safety.pdf" target="_blank">安全装備<br>(EV)</br></a></dt>
+            <dt><a href="PDF/MX-30/mx-30evmodel_specification_syuyousoubi.pdf" target="_blank">主要装備<br>(EV)</br></a></dt>
+            <dt><a href="PDF/MX-30/mx-30evmodel_specification_color.pdf" target="_blank">カラーコンビネーション<br>(EV)</br></a></dt>
+            <dt><a href="PDF/MX-30/mx-30evmodel_specification_es.pdf" target="_blank">環境仕様<br>(EV)</br></a></dt>
+            <dt class="dt-bottom"><a href="PDF/MX-30/mx-30evmodel_specification_syuyousyogen.pdf" target="_blank">主要緒元<br>(EV)</br></a></dt>
           </dl>
         </div>
     </ul>
@@ -320,14 +320,14 @@
         </li>
         <div class="detail7-2">
           <dl>
-            <dt><a href="PDF/MAZDA6/mazda6_specification_syuyousyogen_sedan.pdf" target="_blank">主要緒元(セダン)</a></dt>
-            <dt><a href="PDF/MAZDA6/mazda6_specification_syuyousoubi_sedan.pdf" target="_blank">主要装備(セダン)</a></dt>
-            <dt><a href="PDF/MAZDA6/mazda6_specification_color_sedan.pdf" target="_blank">カラーコンビネーション(セダン)</a></dt>
-            <dt class="dt-bottom"><a href="PDF/MAZDA6/mazda6_specification_es_sedan.pdf" target="_blank">環境仕様(セダン)</a></dt>
-            <dt><a href="PDF/MAZDA6/mazda6_specification_syuyousyogen_wagon.pdf" target="_blank">主要緒元(ワゴン)</a></dt>
-            <dt><a href="PDF/MAZDA6/mazda6_specification_syuyousoubi_wagon.pdf" target="_blank">主要装備(ワゴン)</a></dt>
-            <dt><a href="PDF/MAZDA6/mazda6_specification_color_wagon.pdf" target="_blank">カラーコンビネーション(ワゴン)</a></dt>
-            <dt class="dt-bottom"><a href="PDF/MAZDA6/mazda6_specification_es_wagon.pdf" target="_blank">環境仕様(ワゴン)</a></dt>
+            <dt><a href="PDF/MAZDA6/mazda6_specification_syuyousyogen_sedan.pdf" target="_blank">主要緒元<br>(セダン)</br></a></dt>
+            <dt><a href="PDF/MAZDA6/mazda6_specification_syuyousoubi_sedan.pdf" target="_blank">主要装備<br>(セダン)</br></a></dt>
+            <dt><a href="PDF/MAZDA6/mazda6_specification_color_sedan.pdf" target="_blank">カラーコンビネーション<br>(セダン)</br></a></dt>
+            <dt class="dt-bottom"><a href="PDF/MAZDA6/mazda6_specification_es_sedan.pdf" target="_blank">環境仕様<br>(セダン)</br></a></dt>
+            <dt><a href="PDF/MAZDA6/mazda6_specification_syuyousyogen_wagon.pdf" target="_blank">主要緒元<br>(ワゴン)</br></a></dt>
+            <dt><a href="PDF/MAZDA6/mazda6_specification_syuyousoubi_wagon.pdf" target="_blank">主要装備<br>(ワゴン)</br></a></dt>
+            <dt><a href="PDF/MAZDA6/mazda6_specification_color_wagon.pdf" target="_blank">カラーコンビネーション<br>(ワゴン)</br></a></dt>
+            <dt class="dt-bottom"><a href="PDF/MAZDA6/mazda6_specification_es_wagon.pdf" target="_blank">環境仕様<br>(ワゴン)</br></a></dt>
             <dt><a href="PDF/MAZDA6/mazda6_specification_puraice_op.pdf" target="_blank">価格＆セットオプション</a></dt>
             <dt class="dt-bottom"><a href="PDF/MAZDA6/mazda6_specification_safety.pdf" target="_blank">安全装備</a></dt>
           </dl>
@@ -360,11 +360,11 @@
             <dt><a href="PDF/MAZDA3/mazda3_specification_syuyousyogen_fastback.pdf" target="_blank">主要緒元<br>(ファストバック)</br></a></dt>
             <dt><a href="PDF/MAZDA3/mazda3_specification_syuyousoubi_fastback.pdf" target="_blank">主要装備<br>(ファストバック)</br></a></dt>
             <dt><a href="PDF/MAZDA3/mazda3_specification_es_fastback.pdf" target="_blank">環境仕様<br>(ファストバック)</br></a></dt>
-            <dt class="dt-bottom"><a href="PDF/MAZDA3/mazda3_specification_color_fastback.pdf" target="_blank">カラーコンビネーション(ファストバック)</a></dt>
-            <dt><a href="PDF/MAZDA3/mazda3_specification_syuyousyogen_sedan.pdf" target="_blank">主要緒元(セダン)</a></dt>
-            <dt><a href="PDF/MAZDA3/mazda3_specification_syuyousoubi_sedan.pdf" target="_blank">主要装備(セダン)</a></dt>
-            <dt><a href="PDF/MAZDA3/mazda3_specification_es_sedan.pdf" target="_blank">環境仕様(セダン)</a></dt>
-            <dt class="dt-bottom"><a href="PDF/MAZDA3/mazda3_specification_color_sedan.pdf" target="_blank">カラーコンビネーション(セダン)</a></dt>
+            <dt class="dt-bottom"><a href="PDF/MAZDA3/mazda3_specification_color_fastback.pdf" target="_blank">カラーコンビネーション<br>(ファストバック)</br></a></dt>
+            <dt><a href="PDF/MAZDA3/mazda3_specification_syuyousyogen_sedan.pdf" target="_blank">主要緒元<br>(セダン)</br></a></dt>
+            <dt><a href="PDF/MAZDA3/mazda3_specification_syuyousoubi_sedan.pdf" target="_blank">主要装備<br>(セダン)</br></a></dt>
+            <dt><a href="PDF/MAZDA3/mazda3_specification_es_sedan.pdf" target="_blank">環境仕様<br>(セダン)</br></a></dt>
+            <dt class="dt-bottom"><a href="PDF/MAZDA3/mazda3_specification_color_sedan.pdf" target="_blank">カラーコンビネーション<br>(セダン)</br></a></dt>
             <dt><a href="PDF/MAZDA3/mazda3_specification_connected.pdf" target="_blank">コネクテッドサービス</a></dt>
             <dt><a href="PDF/MAZDA3/mazda3_specification_safety.pdf" target="_blank">安全装備</a></dt>
             <dt class="dt-bottom"><a href="PDF/MAZDA3/mazda3_specification_puraice_op.pdf" target="_blank">価格＆セットオプション</a></dt>
@@ -437,12 +437,12 @@
             <dt><a href="PDF/ROADSTER/roadster_specification_puraice_op.pdf" target="_blank">価格＆セットオプション</a></dt>
             <dt><a href="PDF/ROADSTER/roadster_specification_es.pdf" target="_blank">環境仕様</a></dt>
             <dt class="dt-bottom"><a href="PDF/ROADSTER/roadster_specification_safety.pdf" target="_blank">安全装備</a></dt>
-            <dt><a href="PDF/ROADSTER/roadster-rf_specification_syuyousyogen.pdf" target="_blank">主要緒元(RF)</a></dt>
-            <dt><a href="PDF/ROADSTER/roadster-rf_specification_syuyousoubi.pdf" target="_blank">主要装備(RF)</a></dt>
-            <dt><a href="PDF/ROADSTER/roadster-rf_specification_puraice_op.pdf" target="_blank">価格＆セットオプション(RF)</a></dt>
-            <dt><a href="PDF/ROADSTER/roadster-rf_specification_color.pdf" target="_blank">カラーコンビネーション(RF)</a></dt>
-            <dt><a href="PDF/ROADSTER/roadster-rf_specification_es.pdf" target="_blank">環境仕様(RF)</a></dt>
-            <dt class="dt-bottom"><a href="PDF/ROADSTER/roadster-rf_specification_safety.pdf" target="_blank">安全装備(RF)</a></dt>
+            <dt><a href="PDF/ROADSTER/roadster-rf_specification_syuyousyogen.pdf" target="_blank">主要緒元<br>(RF)</br></a></dt>
+            <dt><a href="PDF/ROADSTER/roadster-rf_specification_syuyousoubi.pdf" target="_blank">主要装備<br>(RF)</br></a></dt>
+            <dt><a href="PDF/ROADSTER/roadster-rf_specification_puraice_op.pdf" target="_blank">価格＆セットオプション<br>(RF)</br></a></dt>
+            <dt><a href="PDF/ROADSTER/roadster-rf_specification_color.pdf" target="_blank">カラーコンビネーション<br>(RF)</br></a></dt>
+            <dt><a href="PDF/ROADSTER/roadster-rf_specification_es.pdf" target="_blank">環境仕様<br>(RF)</br></a></dt>
+            <dt class="dt-bottom"><a href="PDF/ROADSTER/roadster-rf_specification_safety.pdf" target="_blank">安全装備<br>(RF)</br></a></dt>
           </dl>
         </div>
     </ul>
