--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <title>Pocket.M</title>
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100;300;400;500;700;900&family=Noto+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap"
     rel="stylesheet">
-  <link rel="shortcut icon" href="img/micon.jpg">
-  <link rel="apple-touch-icon" href="img/micon.jpg">
+  <link rel="shortcut icon" href="img/micon.png">
+  <link rel="apple-touch-icon" href="img/micon.png">
   <link rel="stylesheet" href="https://unpkg.com/ress/dist/ress.min.css">
   <meta name="mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-capable" content="yes">
