--- a/index.html
+++ b/index.html
@@ -79,13 +79,17 @@
           <p class="car-size-ROADSTER">3,915×1,735×1,235</p>
         </li>
       </span>
-      <span class="kinou7" style="--i:6;--x:1;--y:-1;"></span>
+      <span class="kinou7" style="--i:6;--x:1;--y:-1;"><ion-icon name="car-outline"></ion-icon></span>
       <span class="kinou8" style="--i:7;--x:1;--y:1;"></span>
+
+
 
     </div>
     <div class="close"><ion-icon name="close-outline"></ion-icon></div>
   </div>
 
+
+  
   <nav class="navi1">
     <h2>CX-3</h2>
     <ul class="navi-menu">
